# revolut-analytics

./: .gitignore  README.md  pyproject.toml  revolut_analytics.py
src/: Dashboard.py
src/pages/: Grocceries.py
